fix(package.json): Add connect module

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "server/app.js",
   "dependencies": {
     "express": "latest",
+    "connect": "latest",
     "body-parser": "latest",
     "mongoose": "latest"
   },
